2004-10-29  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* extfs/iso9660.in (mcisofs_list): Fix regular expression for stripping
	of file name. Use autotools macro for awk instead full path.

2004-10-28  Leonard den Ottolander  <leonard * den ottolander nl>

	* extfs/iso9660.in (mcisofs_list): Fix stripping of file name in awk code.

2004-10-28  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* fish.c (fish_open_archive_int): Fix missed "%s".

2004-10-27  Roland Illig  <roland.illig@gmx.de>

	* ftpfs.c (ftpfs_initconn): Replace int with socklen_t where
	appropriate. (ftpfs_open_data_connection): Likewise.

2004-10-27  Leonard den Ottolander  <leonard * den ottolander nl>

	* tar.c tar_read_header(): q should not point to a static string.
	Canonicalize q.

	* extfs/iso9660.in: Fix quoting issues.
	* extfs/trpm: Likewise. Put -- before "$1" to stop argument parsing.

2004-10-25  Andrew V. Samoilov  <sav@bcs.zp.ua>

        * smbfs.c (smbfs_open_readwrite): Comment out flags games,
        it is cli_open() headache.

	* vfs.c (mc_def_getlocalcopy): Don't close fd -1.
	(_vfs_get_class): Make path "char *" instead of
	"const char *" because it write to path.

	(vfs_get_class): Use g_strdup()/g_free() to do "pathname"
	really "const char *".

2004-10-23  Roland Illig  <roland.illig@gmx.de>

	* README: Add explanation for using GPL licensed code from
	src/ in vfs.

	From Leonard den Ottolander and Roland Illig.

2004-10-21  Roland Illig  <roland.illig@gmx.de>

	* mcfs.c: Add INADDR_NONE definition for SunOS.
	* mcserv.c: Likewise. (struct user_pass): Add "const" qualifier.

2004-10-18  Roland Illig  <roland.illig@gmx.de>

	* extfs/hp48.in: Correct quoting from last patch. Avoid a
	subshell when none is needed.

2004-10-18  Roland Illig  <roland.illig@gmx.de>

	* extfs/audio.in: Fix even more quoting issues.
	* extfs/hp48.in: Likewise.

	Patch from q# <eth0 o2 pl>.

2004-10-18  Roland Illig  <roland.illig@gmx.de>

	* extfs/uar.in: Improve filename quoting. Add error messages.
